# pop

./: .gitignore  CMakeLists.txt  README.md  TODO.md  run_project.md
app/: main.cpp
brain/: CMakeLists.txt
brain/app/: brain.cpp
brain/include/brain/: ArbDetector.hpp  BrainCmdLine.hpp  JsonParsers.hpp  UnifiedBook.hpp  WsServer.hpp
brain/src/brain/: ArbDetector.cpp  UnifiedBook.cpp  WsServer.cpp
common/: CMakeLists.txt
common/include/orderbook/: OrderBookController.hpp
common/src/orderbook/: OrderBookController.cpp
common/src/utils/: ProcessLoggingUtils.cpp
deploy/: README.md
docs/: HOWTO.md  PERSISTENCE_SCHEMA.md  brain.md  pop.md
include/: CmdLine.hpp  VenueUtils.hpp  cmdline.hpp  feed_handler.h  feed_handler.hpp  order_book.hpp  rest_client.hpp  utils.h  venue_factory.hpp  venue_util.hpp  ws_client.hpp
include/abstract/: FeedHandler.hpp  OrderBookController.hpp  StreamParser.hpp  feed_handler.hpp  stream_parser.hpp
include/client_connection_handlers/: RestClient.hpp  WsClient.hpp
include/connection_handler/: WsClient.hpp
include/md/: GenericFeedHandler.hpp  VenueAdapter.hpp
include/orderbook/: BinanceOrderBookController.hpp  L2BookController.hpp  L2OrderBook.hpp  NOrderBook.hpp  NOrderBookController.hpp  OrderBook.hpp  OrderBookController.hpp  OrderBookUtils.hpp  l2_order_book.hpp
include/postprocess/: FilePersistSink.hpp
include/stream_parser/: BinanceL2Parser.hpp  BinanceStreamParser.hpp  UpdateTypes.hpp  binance_stream_parser.hpp  bitget_stream_parser.hpp  bybit_stream_parser.hpp  kucoin_stream_parser.hpp  okx_stream_parser.hpp
include/utils/: CheckSumUtils.hpp  DebugConfigUtils.hpp  ProcessLoggingUtils.hpp
pop/: CMakeLists.txt
pop/app/: main.cpp
pop/include/: CmdLine.hpp
pop/include/md/: GenericFeedHandler.hpp
pop/include/postprocess/: WsPublishSink.hpp
pop/include/utils/: DebugConfigUtils.hpp
pop/src/connection_handler/: RestClient.cpp
pop/src/md/: GenericFeedHandler.cpp
pop/src/md/adapters/: BitgetAdapter.cpp  KucoinAdapter.cpp
pop/src/postprocess/: WsPublishSink.cpp
scripts/: arb_multi_sim.py  arbitrage_validator.ipynb  brain_ws_server.py  jsonl_stream_loader.py  jsonl_to_books_cache.ipynb  raw_stream_arbitrage_simulation.ipynb  unified_arb_stream.py
src/: binance_feed_handler.cpp  bitget_feed_handler.cpp  bybit_feed_handler.cpp  main.cpp  okx_feed_handler.cpp  rest_client.cpp  utils.cpp  venue_factory.cpp  ws_client.cpp
src/client_connection_handlers/: RestClient.cpp  WsClient.cpp  rest_client.cpp  ws_client.cpp
src/connection_handler/: WsClient.cpp
src/feed_handlers/: BinanceFeedHandler.cpp  BitgetFeedHandler.cpp  BybitFeedHandler.cpp  KucoinFeedHandler.cpp  OKXFeedHandler.cpp  binance_feed_handler.cpp  bitget_feed_handler.cpp  bybit_feed_handler.cpp  kucoin_feed_handler.cpp  okx_feed_handler.cpp
src/md/: GenericFeedHandler.cpp
src/md/adapters/: BinanceAdapter.cpp  BitgetAdapter.cpp  BybitAdapter.cpp  KucoinAdapter.cpp  OKXAdapter.cpp
src/orderbook/: BinanceOrderBookController.cpp  L2BookController.cpp  NOrderBookController.cpp  OrderBookController.cpp
src/postprocess/: FilePersistSink.cpp
src/stream_parser/: BinanceL2Parser.cpp  BinanceStreamParser.cpp
test/: CMakeLists.txt  TestREADME.md  feed_handler_test.cpp
test/mocks/: mock_feed_handler.h
